--- a/index.html
+++ b/index.html
@@ -19,18 +19,10 @@
             width: 8px; height: 8px; border: 2px solid rgba(0, 255, 0, 0.8);
             border-radius: 50%; pointer-events: none; z-index: 100;
         }
-        #inventory {
-            position: fixed; bottom: 20px; right: 20px;
-            display: flex; gap: 10px; z-index: 300;
-        }
+        #inventory { position: fixed; bottom: 20px; right: 20px; display: flex; gap: 10px; z-index: 300; }
         .slot {
-            width: 60px; height: 60px;
-            background: rgba(0, 0, 0, 0.6);
-            border: 2px solid #555;
-            border-radius: 8px;
-            display: flex; align-items: center; justify-content: center;
-            color: white; font-size: 10px; font-weight: bold;
-            position: relative;
+            width: 60px; height: 60px; background: rgba(0, 0, 0, 0.6); border: 2px solid #555; border-radius: 8px;
+            display: flex; align-items: center; justify-content: center; color: white; font-size: 10px; font-weight: bold; position: relative;
         }
         .slot.active { border-color: #00ff00; background: rgba(0, 255, 0, 0.2); }
         .slot::after { content: attr(data-key); position: absolute; top: 2px; left: 4px; color: #aaa; }
@@ -90,25 +82,15 @@
 
             const loader = new THREE.GLTFLoader();
 
-            // --- 1. Pistol.glb のロードと向き・サイズの修正 ---
             loader.load('./Pistol.glb', (gltf) => {
                 gun = gltf.scene;
-                
-                // サイズ：さらに1/3（0.005 / 3 ≒ 0.0016）
                 const s = 0.0016; 
                 gun.scale.set(s, s, s); 
-                
-                // 向きの修正：下を向いているとのことなので、X軸を回転させて起こす
-                // モデルによりますが、Math.PI / 2 (90度) または -Math.PI / 2 で調整
-                gun.rotation.x = Math.PI / 2; 
-                gun.rotation.y = Math.PI / 2; 
-                gun.rotation.z = 0;
+                gun.rotation.set(Math.PI / 2, Math.PI / 2, 0); 
 
                 gun.visible = false; 
-                console.log("Pistol resized and rotated.");
             });
 
-            // 2. キャラクターのロード
             loader.load('./m.glb', (gltf) => {
                 model = gltf.scene;
                 scene.add(model);
@@ -120,8 +102,8 @@
                             const boneName = child.name.toLowerCase();
                             if (boneName.includes("hand") && (boneName.includes("r") || boneName.includes("right"))) {
                                 child.add(gun);
-                                // 手のひらの中での位置（銃のグリップを握る位置に微調整）
-                                gun.position.set(0, 0, 0); 
+                                // ★ ピストルの位置調整：左に-0.02、前に+0.05（モデルに合わせて微調整してください）
+                                gun.position.set(-0.02, 0.01, 0.05); 
                             }
                         }
                     });
@@ -199,8 +181,13 @@
                         model.position.x += Math.sin(model.rotation.y) * speed;
                         model.position.z += Math.cos(model.rotation.y) * speed;
 
+                        // ★ 改善：ピストル装備中も足を動かす
                         if (currentEquip === 2 && actions['aim_pose']) {
-                            fadeToAction('aim_pose', 0.2);
+                            // 構えポーズと歩きを混ぜる（構えのウェイトを強くする）
+                            actions['aim_pose'].play().setEffectiveWeight(1.0);
+                            const walkAnim = isCrouching ? actions['crouch_walk'] : (onlyForward ? actions['run'] : actions['walk']);
+                            if(walkAnim) walkAnim.play().setEffectiveWeight(0.5); 
+                            currentAction = actions['aim_pose'];
                         } else {
                             if (isCrouching) fadeToAction('crouch_walk', 0.2);
                             else if (onlyForward) fadeToAction('run', 0.2); 
@@ -210,13 +197,14 @@
                         if (currentEquip === 2 && actions['aim_pose']) {
                             fadeToAction('aim_pose', 0.2);
                         } else {
-                            fadeToAction(isCrouching ? (isMoving ? 'crouch_walk' : 'crouch_idle') : 'idle', 0.2);
+                            fadeToAction(isCrouching ? 'crouch_idle' : 'idle', 0.2);
                         }
                     }
 
                     const targetY = isCrouching ? -0.4 : 0;
                     model.position.y += (targetY - model.position.y) * 0.1;
 
+                    // カメラ
                     const camDist = 2.4, camSide = 1.0, camHeight = 1.5;
                     const hDist = camDist * Math.cos(cameraElevation);
                     const vDist = camDist * Math.sin(cameraElevation);
